added project interactivity

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -9,15 +9,6 @@
     <script src="https://kit.fontawesome.com/cc4af5bfc1.js" crossorigin="anonymous"></script>
     <title>Derek Prieur Portfolio</title>
     <meta charset="UTF-8" />
-    <style>
-        #myResume {
-            width: 80%;
-            height: 800px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
-        }
-    </style>
 </head>
 
 <body>
@@ -25,12 +16,18 @@
         <img class="logo" src="../images/logo.png" alt="Derek Prieur Logo">
         <ul class="nav-bar">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="">Resume</a></li>
+            <li><a href="./resume.html">Resume</a></li>
             <li><a href="https://github.com/derekprieur" target="_blank">GitHub</a></li>
-            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="">Projects</a></li>
         </ul>
     </nav>
-    <iframe id="myResume" src="../images/DerekPrieurDev.pdf"></iframe>
+    <main>
+        <div class="projects">
+            <ul class="project-list">
+                <li class="project-item"><a href="../Projects/setup/index.html" target="_blank">Color Flipper </a></li>
+            </ul>
+        </div>
+    </main>
 </body>
 
 </html>
