--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul class="nav-bar">
             <li><a href="">Home</a></li>
             <li><a href="Pages/resume.html">Resume</a></li>
-            <li><a href="https://github.com/derekprieur">GitHub</a></li>
-            <li><a href="">Projects</a></li>
+            <li><a href="https://github.com/derekprieur" target="_blank">GitHub</a></li>
+            <li><a href="Pages/projects.html">Projects</a></li>
         </ul>
     </nav>
     <div class="hero">
@@ -48,10 +48,11 @@
             <h4 class="contact-item">(518) 926-8352</h4>
         </div>
         <div class="socials">
-            <a href="https://github.com/derekprieur"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/derek-prieur-b23b67226/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/derekprieur/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/derekprieur_"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://github.com/derekprieur" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/derek-prieur-b23b67226/" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/derekprieur/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com/derekprieur_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
 </body>
