--- a/Projects/setup/index.html
+++ b/Projects/setup/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Color Flipper || Simple</title>
+  <title>Color Flipper</title>
 
   <!-- styles -->
   <link rel="stylesheet" href="styles.css" />
@@ -15,25 +15,17 @@
     <div class="nav-center">
       <h4>color flipper</h4>
       <ul class="nav-links">
-        <li>
-          <a href="index.html">simple</a>
-        </li>
-        <li>
-          <a href="hex.html">hex</a>
-        </li>
       </ul>
     </div>
   </nav>
   <main>
     <div class="container">
-      <h2>basic background color : <span class="color">
-          #f1f5f8
-        </span></h2>
-      <button class="btn btn-hero" id="btn">click me</button>
+      <h2>random background color : <span class="color">#f1f5f8</span></h2>
+      <button class="btn btn-hero" id="btn">New Color</button>
     </div>
   </main>
   <!-- javascript -->
-  <script src="app.js"></script>
+  <script src="hex.js"></script>
 </body>
 
 </html>
