--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -24,6 +24,7 @@
     <main>
         <div class="projects">
             <ul class="project-list">
+                <li class="project-item"><a href="../Projects/Bob/index.html" target="_blank">Bob </a></li>
                 <li class="project-item"><a href="../Projects/setup/index.html" target="_blank">Color Flipper </a></li>
             </ul>
         </div>
