--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
@@ -20,6 +20,9 @@
             <li><a href="https://github.com/derekprieur" target="_blank">GitHub</a></li>
             <li><a href="Pages/projects.html">Projects</a></li>
         </ul>
+        <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <div class="hero">
         <div>
@@ -55,6 +58,7 @@
             <a href="https://twitter.com/derekprieur_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
