added memory game project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -26,6 +26,8 @@
             <ul class="project-list">
                 <li class="project-item"><a href="../Projects/Bob/index.html" target="_blank">Bob </a></li>
                 <li class="project-item"><a href="../Projects/setup/index.html" target="_blank">Color Flipper </a></li>
+                <li class="project-item"><a href="../Projects/memory-game/index.html" target="_blank">Memory Game </a>
+                </li>
                 <li class="project-item"><a href="../Projects/pacman/index.html" target="_blank">Pac-Man </a></li>
             </ul>
         </div>
