added tetris project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -29,6 +29,7 @@
                 <li class="project-item"><a href="../Projects/memory-game/index.html" target="_blank">Memory Game </a>
                 </li>
                 <li class="project-item"><a href="../Projects/pacman/index.html" target="_blank">Pac-Man </a></li>
+                <li class="project-item"><a href="../Projects/tetris/index.html" target="_blank">Tetris </a></li>
             </ul>
         </div>
     </main>
