--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -25,6 +25,8 @@
         <div class="projects">
             <ul class="project-list">
                 <li class="project-item"><a href="../Projects/Bob/index.html" target="_blank">Bob </a></li>
+                <li class="project-item"><a href="../Projects/candy-crush/index.html" target="_blank">Candy Crush </a>
+                </li>
                 <li class="project-item"><a href="../Projects/setup/index.html" target="_blank">Color Flipper </a></li>
                 <li class="project-item"><a href="../Projects/memory-game/index.html" target="_blank">Memory Game </a>
                 </li>
