--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -28,6 +28,8 @@
                 <li class="project-item"><a href="../Projects/candy-crush/index.html" target="_blank">Candy Crush </a>
                 </li>
                 <li class="project-item"><a href="../Projects/setup/index.html" target="_blank">Color Flipper </a></li>
+                <li class="project-item"><a href="../Projects/doodle-jump/index.html" target="_blank">Doodle Jump </a>
+                </li>
                 <li class="project-item"><a href="../Projects/memory-game/index.html" target="_blank">Memory Game </a>
                 </li>
                 <li class="project-item"><a href="../Projects/pacman/index.html" target="_blank">Pac-Man </a></li>
