added wordle game

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -34,6 +34,7 @@
                 </li>
                 <li class="project-item"><a href="../Projects/pacman/index.html" target="_blank">Pac-Man </a></li>
                 <li class="project-item"><a href="../Projects/tetris/index.html" target="_blank">Tetris </a></li>
+                <li class="project-item"><a href="../Projects/wordle/index.html" target="_blank">Wordle </a></li>
             </ul>
         </div>
     </main>
