added dark mode toggle to main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <img class="logo" src="images/logo.png" alt="Derek Prieur Logo">
+        <h3 class="logo">{devderek}</h3>
         <ul class="nav-bar">
             <li><a href="">Home</a></li>
             <li><a href="Pages/resume.html">Resume</a></li>
@@ -31,13 +31,13 @@
         <div class="hero-info">
             <h4 id="job-title">Software developer</h4>
             <h1 id="name">Derek Prieur</h1>
-            <p class="hero-description">I am a twenty six year old currently working as a QA Analyst at OptionSoft
+            <p class="hero-description desc1">I am a twenty six year old currently working as a QA Analyst at OptionSoft
                 Technologies. My favorite
                 subjects have always been math, science & tech. This year I have become an avid reader and finish a
                 book
                 once per week (some of my other hobbies including exercise, cooking/veganism, meditation & anime).
             </p>
-            <p class="hero-description">I am very organized and goal-oriented both professionally and personally.
+            <p class="hero-description desc2">I am very organized and goal-oriented both professionally and personally.
                 Striving to improve myself
                 everyday, even by just 1%, is something I take very seriously. There is so much to do and learn in
                 life
@@ -50,12 +50,23 @@
             <h4 class="contact-item">|</h4>
             <h4 class="contact-item">(518) 926-8352</h4>
         </div>
-        <div class="socials">
-            <a href="https://github.com/derekprieur" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/derek-prieur-b23b67226/" target="_blank"><i
-                    class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/derekprieur/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/derekprieur_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <div class="footer-btns">
+            <div class="theme">
+                <div class="theme-btns">
+                    <i class="fa-solid fa-moon"></i>
+                    <i class="fa-solid fa-sun"></i>
+                </div>
+            </div>
+            <div class="socials">
+                <a href="https://github.com/derekprieur" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/derek-prieur-b23b67226/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/derekprieur/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/derekprieur_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+            <div class="theme-hide">
+            </div>
         </div>
     </footer>
     <script src="src/index.js"></script>
