--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <img class="logo" src="../images/logo.png" alt="Derek Prieur Logo">
+        <h3 class="logo">{devderek}</h3>
         <ul class="nav-bar">
             <li><a href="../index.html">Home</a></li>
             <li><a href="./resume.html">Resume</a></li>
