--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -22,7 +22,7 @@
 
 <body>
     <nav>
-        <img class="logo" src="../images/logo.png" alt="Derek Prieur Logo">
+        <h3 class="logo">{devderek}</h3>
         <ul class="nav-bar">
             <li><a href="../index.html">Home</a></li>
             <li><a href="">Resume</a></li>
