--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -11,8 +11,8 @@
     <meta charset="UTF-8" />
     <style>
         #myResume {
-            width: 80%;
-            height: 800px;
+            width: 40%;
+            height: 850px;
             margin-left: auto;
             margin-right: auto;
             margin-top: 50px;
@@ -30,7 +30,7 @@
             <li><a href="./projects.html">Projects</a></li>
         </ul>
     </nav>
-    <iframe id="myResume" src="../images/DerekPrieurDev.pdf"></iframe>
+    <iframe id="myResume" src="../images/derek-prieur-dev-resume.png"></iframe>
 </body>
 
 </html>
