--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </button>
     </nav>
     <div class="hero">
-        <div>
+        <div class="hero-container">
             <img class="hero-image" src="./images/mountain.png" alt="Derek climbing mountain" />
         </div>
         <div class="hero-info">
