added crypto converter project and updated project page layout

--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <style>
         #myResume {
-            width: 40%;
+            width: 750px;
             height: 850px;
             margin-left: auto;
             margin-right: auto;
