added hamburger button to resume & project pages

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -20,6 +20,9 @@
             <li><a href="https://github.com/derekprieur" target="_blank">GitHub</a></li>
             <li><a href="">Projects</a></li>
         </ul>
+        <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <main>
         <div class="projects">
@@ -40,6 +43,7 @@
             </ul>
         </div>
     </main>
+    <script src="../src/index.js"></script>
 </body>
 
 </html>
