--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -29,8 +29,12 @@
             <li><a href="https://github.com/derekprieur" target="_blank">GitHub</a></li>
             <li><a href="./projects.html">Projects</a></li>
         </ul>
+        <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <iframe id="myResume" src="../images/derek-prieur-dev-resume.png"></iframe>
+    <script src="../src/index.js"></script>
 </body>
 
 </html>
