changed project links to their github pages site

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -27,19 +27,26 @@
     <main>
         <div class="projects">
             <ul class="project-list">
-                <li class="project-item"><a href="../Projects/Bob/index.html" target="_blank">Bob </a></li>
-                <li class="project-item"><a href="../Projects/candy-crush/index.html" target="_blank">Candy Crush </a>
+                <li class="project-item"><a href="https://derekprieur.github.io/bob/" target="_blank">Bob </a></li>
+                <li class="project-item"><a href="https://derekprieur.github.io/candy-crush/" target="_blank">Candy
+                        Crush </a>
                 </li>
-                <li class="project-item"><a href="../Projects/setup/index.html" target="_blank">Color Flipper </a></li>
+                <li class="project-item"><a href="https://derekprieur.github.io/color-flipper/" target="_blank">Color
+                        Flipper </a></li>
                 <li class="project-item"><a href="https://derekprieur.github.io/crypto-converter/"
                         target="_blank">Crypto Converter </a></li>
-                <li class="project-item"><a href="../Projects/doodle-jump/index.html" target="_blank">Doodle Jump </a>
+                <li class="project-item"><a href="https://derekprieur.github.io/doodle-jump/" target="_blank">Doodle
+                        Jump </a>
                 </li>
-                <li class="project-item"><a href="../Projects/memory-game/index.html" target="_blank">Memory Game </a>
+                <li class="project-item"><a href="https://derekprieur.github.io/memorygame/" target="_blank">Memory Game
+                    </a>
                 </li>
-                <li class="project-item"><a href="../Projects/pacman/index.html" target="_blank">Pac-Man </a></li>
-                <li class="project-item"><a href="../Projects/tetris/index.html" target="_blank">Tetris </a></li>
-                <li class="project-item"><a href="../Projects/wordle/index.html" target="_blank">Wordle </a></li>
+                <li class="project-item"><a href="https://derekprieur.github.io/pacman/" target="_blank">Pac-Man </a>
+                </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/tetris/" target="_blank">Tetris </a>
+                </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/wordle/" target="_blank">Wordle </a>
+                </li>
             </ul>
         </div>
     </main>
