added calculator/removed bob from projects list

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -27,7 +27,8 @@
     <main>
         <div class="projects">
             <ul class="project-list">
-                <li class="project-item"><a href="https://derekprieur.github.io/bob/" target="_blank">Bob </a></li>
+                <li class="project-item"><a href="https://derekprieur.github.io/calculator/"
+                        target="_blank">Calculator</a></li>
                 <li class="project-item"><a href="https://derekprieur.github.io/candy-crush/" target="_blank">Candy
                         Crush </a>
                 </li>
