added quiz project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -44,6 +44,8 @@
                 </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/pacman/" target="_blank">Pac-Man </a>
                 </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/quiz-app/" target="_blank">Quiz App </a>
+                </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/tetris/" target="_blank">Tetris </a>
                 </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/wordle/" target="_blank">Wordle </a>
