added clock project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -32,6 +32,7 @@
                 <li class="project-item"><a href="https://derekprieur.github.io/candy-crush/" target="_blank">Candy
                         Crush </a>
                 </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/clock/" target="_blank">Clock </a></li>
                 <li class="project-item"><a href="https://derekprieur.github.io/color-flipper/" target="_blank">Color
                         Flipper </a></li>
                 <li class="project-item"><a href="https://derekprieur.github.io/crypto-converter/"
