added tic-tac-toe project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -49,6 +49,9 @@
                 </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/tetris/" target="_blank">Tetris </a>
                 </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/tic-tac-toe/"
+                        target="_blank">Tic-tac-toe </a>
+                </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/wordle/" target="_blank">Wordle </a>
                 </li>
             </ul>
