added typice practice project to projects

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -52,6 +52,9 @@
                 <li class="project-item"><a href="https://derekprieur.github.io/tic-tac-toe/"
                         target="_blank">Tic-tac-toe </a>
                 </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/typing-practice/" target="_blank">Typing
+                        Practice </a>
+                </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/wordle/" target="_blank">Wordle </a>
                 </li>
             </ul>
