added youtube link

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 <a href="https://www.instagram.com/derekprieur/" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
                 <a href="https://twitter.com/derekprieur_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.youtube.com/channel/UCRfCF6455D8bysDrUixxVhw" target="_blank"><i
+                        class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="theme-hide">
             </div>
