added piano project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -45,6 +45,9 @@
                 </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/pacman/" target="_blank">Pac-Man </a>
                 </li>
+                </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/piano/" target="_blank">Piano </a>
+                </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/quiz-app/" target="_blank">Quiz App </a>
                 </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/tetris/" target="_blank">Tetris </a>
