added movies react project

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -43,6 +43,8 @@
                 <li class="project-item"><a href="https://derekprieur.github.io/memorygame/" target="_blank">Memory Game
                     </a>
                 </li>
+                <li class="project-item"><a href="https://derekprieur.github.io/movies/" target="_blank">Movies </a>
+                </li>
                 <li class="project-item"><a href="https://derekprieur.github.io/pacman/" target="_blank">Pac-Man </a>
                 </li>
                 </li>
